links.html: added some more urls. fixed somethings. reflected these changes in links/index.html as well.

--- a/links.html
+++ b/links.html
@@ -40,7 +40,7 @@ This page contains the best links to interesting GIMP-sites:
   especially for users of the Windows-version of GIMP
 </p>
 <p>
-  <A href="http://lists.xcf.berkeley.edu/mailman/listinfo/gimp-developer"></a><br>
+  <A href="http://lists.xcf.berkeley.edu/mailman/listinfo/gimp-developer">GIMP Developer</a><br>
   The GIMP developer mail list.
 </p>
 <p>
@@ -67,6 +67,10 @@ This page contains the best links to interesting GIMP-sites:
   Take your bugs here.
 </p>
 <p>
+  <A href="http://developer.gimp.org">developer.gimp.org</a><br />
+  The GIMP Developer site
+</p>
+<p>
   <A href="http://manual.gimp.org">manual.gimp.org</a><br />
   The GIMP User Maunual (GUM)
 </p>
@@ -78,6 +82,9 @@ This page contains the best links to interesting GIMP-sites:
   <A href="http://ircd.gimp.org">ircd.gimp.org</a><br />
   The Official site of GIMPNet.
 </p>
+
+
+<!-- more starts here -->
 <p>
   <A href="http://adrian.gimp.org">adrian.gimp.org</a><br />
   Tutorials, and other useful and entertaining information.
@@ -122,6 +129,18 @@ This page contains the best links to interesting GIMP-sites:
 <p>
   <A href="http://xach.gimp.org">xach.gimp.org</a><br />
   The model for GIMP help.
+</p>
+
+
+<p>&nbsp;</p>
+<a name="developer">
+<div class="subtitle">Developer</div>
+<p>
+  <A href="http://www.gegl.org/"></a>GEGL --GIMP 'E' Graphical Library<br />
+  An image processing library based on GObjects.
+</p>
+  <A href="http://cvs.gnome.org/bonsai/">GNOME Bonsai</a><br>
+  Perform queries on the contents of the CVS archive.
 </p>
 
 
@@ -191,6 +210,29 @@ This page contains the best links to interesting GIMP-sites:
   <A href="http://dmoz.org/Arts/Visual_Arts/Computer_Graphics/The_GIMP/">Computer-graphics with GIMP</a><br />
   This OpenDirectoryProject-category holds links to galleries of images created with GIMP
 </p>
+
+
+<p>&nbsp;</p>
+<a name="other">
+<div class="subtitle">Other Graphics Applications</div>
+<p>
+  <A href="http://www.imagemagick.org/">ImageMagick</a><br>
+  A robust collection of tools and libraries that work at the command line as well.
+</p>
+<p>
+  <A href="http://sketch.sourceforge.net/">Sketch</a><br>
+  A vector drawing program for Unix.
+</p>
+<p>
+  <A href="http://www.newbreedsoftware.com/tuxpaint/">Tux Paint</a><br>
+  A drawing program for young children.
+</p>
+<p>
+  <A href="http://www.trilon.com/xv/">XV</a><br>
+  One of the original unix graphics applications.
+</p>
+
+
 <br /><br />
 <a href="http://www.start4all.com/webSite/suggestions.php?subject=gimp">Add a new link</a><br /><br />
 <b>Disclaimer:</b> this page does not contain all GIMP-links available. This is just a nice overview.<br />
