quicky clean up. didn't change the changelog. fixed what is there ...

--- a/links/index.html
+++ b/links/index.html
@@ -82,6 +82,9 @@ This page contains the best links to interesting GIMP-sites:
   <A href="http://ircd.gimp.org">ircd.gimp.org</a><br />
   The Official site of GIMPNet.
 </p>
+<p>
+  <A href="org.html">More ...</a><br />
+</p>
 
 
 <p>&nbsp;</p>
