added martijn (yay!)

--- a/team.html
+++ b/team.html
@@ -16,6 +16,7 @@
   <li>Guest Lecturer, Manish Singh</li>
   <li>Tutorial Coordinator, Niklas Mattisson</li>
   <li>Windows Section, Branko Collins</li>
+  <li>Links Maintainer, Martijn Weisbeek</li>
   <li>Contributer, Guillermo S. Romero</li>
   <li>Contributer, Nathan C. Summers</li>
 </ul>
