moved one tag (doh)

--- a/links/index.html
+++ b/links/index.html
@@ -91,7 +91,7 @@ This page contains the best links to interesting GIMP-sites:
 <a name="developer">
 <div class="subtitle">Developer</div>
 <p>
-  <A href="http://www.gegl.org/"></a>GEGL --GIMP 'E' Graphical Library<br />
+  <A href="http://www.gegl.org/">GEGL --GIMP 'E' Graphical Library</a><br />
   An image processing library based on GObjects.
 </p>
   <A href="http://cvs.gnome.org/bonsai/">GNOME Bonsai</a><br>
