moved the important GIMP urls into an includes file.

--- a/about/index.html
+++ b/about/index.html
@@ -13,13 +13,7 @@
   <a name="src-COPYING" href="COPYING">GNU GENERAL PUBLIC LICENSE</a>.
   (<a href="introduction.html">more ...</a>)
 </p>
-<div class="subtitle">Important URLs</div>
-  <ul name="urls-important">
-    <li><a href="http://www.gimp.org">The GNU Image Manipulation Program</a></li>
-    <li><a href="http://www.gnu.org/">GNU Project</a></li>
-    <li><a href="http://bug.gimp.org/">GIMP Bugzilla</a></li>
-    <li><a href="http://www.gtk.org/">The Gimp Tool Kit</a></li>
-  </ul>
+<!--#include virtual="/includes/urls_important.inc" -->
 <div class="subtitle">Awards won by The GIMP</div>
 <p>
   The GIMP has won several awards through time. For a list of the awards click 
