--- a/links/index.html
+++ b/links/index.html
@@ -5,13 +5,7 @@
 
 <div class="heading">GIMP Links</div>
 This page contains the best links to interesting GIMP-sites:
-<div class="subtitle">Important URLs</div>
-  <ul name="urls-important">
-    <li><a href="http://www.gimp.org">The GNU Image Manipulation Program</a></li>
-    <li><a href="http://www.gnu.org/">GNU Project</a></li>
-    <li><a href="http://bug.gimp.org/">GIMP Bugzilla</a></li>
-    <li><a href="http://www.gtk.org/">The Gimp Tool Kit</a></li>
-  </ul>
+<!--#include virtual="/includes/urls_important.inc" -->
 <div class="subtitle">Other Useful URLs</div>
 <ul>
     <li> <a href="#mailing">Mailinglists</a>
