separated the maillists urls into an includes file and added that to maillists.html

--- a/links/index.html
+++ b/links/index.html
@@ -6,9 +6,11 @@
 <div class="heading">GIMP Links</div>
 This page contains the best links to interesting GIMP-sites:
 <!--#include virtual="/includes/urls_important.inc" -->
+
+
 <div class="subtitle">Other Useful URLs</div>
 <ul>
-    <li> <a href="#mailing">Mailinglists</a>
+    <li> <a href="#maillists">Mailinglists</a>
     <li> <a href="#org">The GIMP Organization</a>
     <li> <a href="#tuts">Tutorials</a>
     <li> <a href="#clubs">Communities</a>
@@ -19,32 +21,8 @@ This page contains the best links to interesting GIMP-sites:
 </ul>
 
 <p>&nbsp;</p>
-<a name="mailing">
-<div class="subtitle">Active Mailinglists</div>
-<p>
-  <A href="maillists.html">Mail List Descriptions</a><br />
-  A more thorough overview of The GIMP related mail lists.
-</p>
-<p>
-  <A href="http://lists.xcf.berkeley.edu/mailman/listinfo/gimp-user">GIMP User</a><br>
-  The original (mostly linux based) user list.
-</p>
-<p>
-  <A href="http://groups.yahoo.com/group/gimpwin-users/">GIMPwin-users</a><br />
-  especially for users of the Windows-version of GIMP
-</p>
-<p>
-  <A href="http://lists.xcf.berkeley.edu/mailman/listinfo/gimp-developer">GIMP Developer</a><br>
-  The GIMP developer mail list.
-</p>
-<p>
-  <A href="http://groups.yahoo.com/group/gimpwin-dev/">GIMPwin-dev</a><br />
-  for anyone who is interested in developing for the Windows-version of GIMP
-</p>
-<p>
-  <A href="http://groups.yahoo.com/group/gimpi/">GIMPImages</a><br />
-  need to get something from their FAQ for here.
-</p>
+<!--#include virtual="/includes/urls_maillists.inc" -->
+
 
 <p>&nbsp;</p>
 <a name="org">
