--- a/maillists.html
+++ b/maillists.html
@@ -5,9 +5,7 @@
 
 <div class="heading">Mail Lists</div>
 <div class="subtitle">The Lists</div>
-<p>
-  GSR! help me!!  :)
-</p>
+<!--#include virtual="/includes/urls_maillists.inc" -->
 <div class="subtitle">List Etiquette</div>
 <p>
   When sending mails to the lists there are some recommendations you
