--- a/maillists.html
+++ b/maillists.html
@@ -3,7 +3,7 @@
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<!--#include virtual="/includes/urls_maillists.inc" -->
+<!--#include virtual="/includes/urls_maillist.inc" -->
 
 <div class="subtitle">List Etiquette</div>
 <p>
