separated more of the links into includes files.

--- a/links/index.html
+++ b/links/index.html
@@ -27,33 +27,7 @@ This page contains the best links to interesting GIMP-sites:
 <p>&nbsp;</p>
 <a name="org">
 <div class="subtitle">The GIMP (dis)Organization</div>
-<p>
-  <A href="http://www.gimp.org">www.gimp.org</a><br />
-  <A href="http:// i.just.love.the.gimp.org"> i.just.love.the.gimp.org</a><br />
-  <A href="http:// bring.out.the.gimp.org"> bring.out.the.gimp.org</a><br />
-  The GIMP web site.
-</p>
-<p>
-  <A href="http://bugs.gimp.org">bugs.gimp.org</a><br />
-  <A href="http://bugzilla.gimp.org">bugzilla.gimp.org</a><br />
-  Take your bugs here.
-</p>
-<p>
-  <A href="http://developer.gimp.org">developer.gimp.org</a><br />
-  The GIMP Developer site
-</p>
-<p>
-  <A href="http://manual.gimp.org">manual.gimp.org</a><br />
-  The GIMP User Maunual (GUM)
-</p>
-<p>
-  <A href="http://registry.gimp.org">registry.gimp.org</a><br />
-  Plug-ins.
-</p>
-<p>
-  <A href="http://ircd.gimp.org">ircd.gimp.org</a><br />
-  The Official site of GIMPNet.
-</p>
+<!--#include virtual="/includes/urls_go-utility.inc" -->
 <p>
   <A href="org.html">More ...</a><br />
 </p>
@@ -62,15 +36,7 @@ This page contains the best links to interesting GIMP-sites:
 <p>&nbsp;</p>
 <a name="developer">
 <div class="subtitle">Developer</div>
-<p>
-  <A href="http://www.gegl.org/">GEGL --GIMP 'E' Graphical Library</a><br />
-  An image processing library based on GObjects.
-</p>
-<p>
-  <A href="http://cvs.gnome.org/bonsai/">GNOME Bonsai</a><br>
-  Perform queries on the contents of the CVS archive.
-</p>
-
+<!--#include virtual="/includes/urls_go-developer.inc" -->
 
 <p>&nbsp;</p>
 <a name="tuts">
