--- a/maillists.html
+++ b/maillists.html
@@ -3,6 +3,8 @@
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
+
+<div class="heading">GIMP - Mail Lists</div>
 <!--#include virtual="/includes/urls_maillist.inc" -->
 
 <div class="subtitle">List Etiquette</div>
