added simons scheme documentation

--- a/links/index.html
+++ b/links/index.html
@@ -22,6 +22,11 @@ This page contains the best links to interesting GIMP-sites:
 
 <p>&nbsp;</p>
 <!--#include virtual="/includes/urls_maillists.inc" -->
+<p>
+  <A href="maillists.html">The GIMP Maillist Page</a><br />
+  A more thorough overview of The GIMP related mail lists and some mail list
+  ettiquette.
+</p>
 
 
 <p>&nbsp;</p>
