Modified ChangeLog. Add the Quickies tutorial to the beginners list. Also
Modified ChangeLog.
Add the Quickies tutorial to the beginners list.
Also did a change from "Making Selections" to "Selection Overview" so I can start porting the tutorials now.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -7,6 +7,9 @@
 
 <div class="subtitle">Beginner</div>
 <p>
+  <a href="Lite_Quickies/">GIMPLite Quickies</a>  Learn to change the image you have with the quickies here.
+</p>
+<p>
   <a href="The_Basics/">The Basics</a>  The famous &quot;GIMP Floating Logos&quot; 
   rescued from the original GIMP web site and slightly modified to fit here.  Even
   if you hate images of text on the web, this tutorial gives you some of the basic
@@ -19,8 +22,7 @@
   the first few times ....
 </p>
 <p>
-  <a href="Making_Selections/">Making Selections</a>  Maybe someone could write an 
-  an overview of the various selection tools and options. 
+  <a href="Selection_Overview/">Selection Overview</a>  Have a look at the options of selections in GIMP.
 </p>
 <p>
   <a href="Borders_On_Selections/">Borders On Selections</a>  Use curves and modes
