"started" to determine the proper wording for the quickies entry into the list of tutorials

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -7,7 +7,8 @@
 
 <div class="subtitle">Beginner</div>
 <p>
-  <a href="Lite_Quickies/">GIMPLite Quickies</a>  Learn to change the image you have with the quickies here.
+  <a href="Lite_Quickies/">GIMPLite Quickies</a>  Use The GIMP for your graphics
+  needs without learning advanced computer graphics methods.
 </p>
 <p>
   <a href="The_Basics/">The Basics</a>  The famous &quot;GIMP Floating Logos&quot; 
