took the s off from an includes. eek!

--- a/links/index.html
+++ b/links/index.html
@@ -21,7 +21,8 @@ This page contains the best links to interesting GIMP-sites:
 </ul>
 
 <p>&nbsp;</p>
-<!--#include virtual="/includes/urls_maillists.inc" -->
+<a name="maillists">
+<!--#include virtual="/includes/urls_maillist.inc" -->
 <p>
   <A href="maillists.html">The GIMP Maillist Page</a><br />
   A more thorough overview of The GIMP related mail lists and some mail list
