--- a/tutorials/Photo_Edit/ContrastMask/index.html
+++ b/tutorials/Photo_Edit/ContrastMask/index.html
@@ -3,6 +3,9 @@
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <div id="main">
 <div class="heading">Creating a Contrast Mask</div>
+<p>
+  Text and images Copyright (C) 2002 <a href="eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
+</p>
 
 <div class="subtitle">Intention</div>
 <p class="images">
@@ -188,14 +191,14 @@
 </p>
 
 <p>
-  The original tutorial can be found <a href="http://cs.uhh.hawaii.edu/~jeschke/photography/articles/gimp/ContrastMask/">here</a>.
+  The original tutorial (possibly with updated information) may be found <a href="http://redskiesatnight.com/">here</a>.
 </p>
 
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
       <span id="footerleft">
-        Tutorial &copy; 2002 <a href="mailto:jeschke@mano.uhh.hawaii.edu">Eric Jeschke</a>
+        Tutorial &copy; 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a>
       </span>
       <span id="footerright">
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
