--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -114,28 +114,25 @@
   <a href="Photo_Edit/Reducing_CCD_Noise/">Reducing CCD Noise</a> Learn how to reduce the CCD Noise in photos.
 </p>
 <p>
-  <a href="Photo_Edit/ContrastMask/">Contrast Mask</a> Help the image to be more detailed with Contrast Mask.
-</p>
-<p>
-<a href="Photo_Edit/ND_Filter/">Neutral Density</a> Learn how to create a ND filter for the digital images.
+  <a href="Photo_Edit/ContrastMask/">Contrast Mask</a> Decrease problem contrast in photos.
 </p>
 <p>
   <a href="Photo_Edit/Sepia_Toning/">Sepia Toning</a> Create a nice sepia photo from color images.
 </p>
 <p>
-  <a href="Photo_Edit/Blur_Overlays/">Gaussian Blur Overlays</a> Use GIMP to create a gaussian blur overlay to the photos.
+  <a href="Photo_Edit/Blur_Overlays/">Gaussian Blur Overlays</a> Increase saturation and add a "dreamy" feel to your photos.
 </p>
 <p>
-  <a href="Photo_Edit/Blown_Out_Highlights/">Salvaging Blown Out Highlights</a> Help your photo to get rid of all thoose blown out highlights.
+  <a href="Photo_Edit/Blown_Out_Highlights/">GIMP Surgery</a> "patch" blown out hightlights in your photos.
 </p>
 <p>
-  <a href="Photo_Edit/Blending_Exposures/">Blending Exposures</a> Use GIMP to blend to photos together from the same scene to one photo.
+  <a href="Photo_Edit/Blending_Exposures/">Blending Exposures</a> Increase dynamic range by combining different exposures of the same scene.
 </p>
 <p>
-  <a href="Photo_Edit/Smart_Sharpening/">"Smart" Sharpening</a> Make your images more sharpened with the help of "Smart" Sharpening.
+  <a href="Photo_Edit/Smart_Sharpening/">"Smart" Sharpening</a> Sharpen images without making noise more noticable.
 </p>
 <p>
-  <a href="Photo_Edit/Selective_Color/">Selective Colorization</a> Change your colored image to B&amp;W and selected areas with colors.
+  <a href="Photo_Edit/Selective_Color/">Selective Colorization</a> Convert images to black and white and restore color selectively.
 </p>
 
 <div class="subtitle">HTML</div>
