Modified ChangeLog. Fixed the mail addresses.
Modified ChangeLog.
Fixed the mail addresses.

--- a/tutorials/Photo_Edit/Blending_Exposures/index.html
+++ b/tutorials/Photo_Edit/Blending_Exposures/index.html
@@ -4,7 +4,7 @@
 <div id="main">
 <div class="heading">Blending Exposures</div>
 <p>
-  Text and images Copyright (C) 2002 <a href="eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
+  Text and images Copyright (C) 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
 </p>
 
 <div class="subtitle"></div>
