made the Linux Magazine origins more prominent before i contact them ;)

--- a/tutorials/Basic_Scheme2/index.html
+++ b/tutorials/Basic_Scheme2/index.html
@@ -3,6 +3,9 @@
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <div id="main">
 <div class="heading">Basic Scheme2</div>
+<p>
+  This article was originally published in <a href="http://www.linux-mag.com/2002-01/power_01.html">Linux Magazine, January 2002</a>.
+</p>
 
 <div class="subtitle">Intention</div>
 <p>
@@ -223,7 +226,7 @@
 </ul>
 
 <p>
-  The original tutorial can be found <a href="http://www.linux-mag.com/2002-01/power_01.html">here</a>.
+  This article was originally published in <a href="http://www.linux-mag.com/2002-01/power_01.html">Linux Magazine, January 2002</a>.
 </p>
 
 </div>
