Modified ChangeLog. Fixed the index for the tutorials in the HTML section.
Modified ChangeLog.
Fixed the index for the tutorials in the HTML section.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -137,10 +137,10 @@
 
 <div class="subtitle">HTML</div>
 <p>
-  <a href="html/Perlotine/">Perlotine</a> Get your image in place with the help of perlotine and tables.
+  <a href="Perlotine/">Perlotine</a> Get your image in place with the help of perlotine and tables.
 </p>
 <p>
-  <a href="html/Image_Map/">Image Map</a> Use GIMP to create a nice Image Map.
+  <a href="Image_Map/">Image Map</a> Use GIMP to create a nice Image Map.
 </p>
 
 
