--- a/about/splash.html
+++ b/about/splash.html
@@ -6,8 +6,197 @@
 <div class="heading">Development Version Splash History</div>
 <div class="subtitle">as extracted from the tarballs</div>
 <p>
-  Images and brief blurbs
+  1.1 Series
 </p>
+<table>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.00.png"><img src="splash/gimp-splash-1.1.00-t.png" width="151" height="86" alt="1.1.00"></a><br />
+  <p>CVS: 1.06 </p><br />
+  <p>version: 1.1.0 </p><br />
+  <p>author:  Adrian</p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.01.png"><img src="splash/gimp-splash-1.1.01-t.png" width="151" height="94" alt="1.1.01"></a><br />
+  <p>CVS: 1.06 </p><br />
+  <p>version: 1.1.1 </p><br />
+  <p>author:  Adrian</p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.02.png"><img src="splash/gimp-splash-1.1.02-t.png" width="150" height="105" alt="1.1.02"></a><br />
+  <p>CVS: 1.08</p><br />
+  <p>version: 1.1.2</p><br />
+  <p>author:  Adrian</p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.03.png"><img src="splash/gimp-splash-1.1.03-t.png" width="150" height="105" alt="1.1.03"></a><br />
+  <p>CVS: 1.08</p><br />
+  <p>version:  1.1.3</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.04.png"><img src="splash/gimp-splash-1.1.04-t.png" width="" height="" alt="1.1.04"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.4</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.05.png"><img src="splash/gimp-splash-1.1.05-t.png" width="" height="" alt="1.1.05"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.5</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.06.png"><img src="splash/gimp-splash-1.1.06-t.png" width="" height="" alt="1.1.06"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.6</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.07.png"><img src="splash/gimp-splash-1.1.07-t.png" width="" height="" alt="1.1.07"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.7</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.08.png"><img src="splash/gimp-splash-1.1.08-t.png" width="" height="" alt="1.1.08"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.8</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.09.png"><img src="splash/gimp-splash-1.1.09-t.png" width="" height="" alt="1.1.09"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.9</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.10.png"><img src="splash/gimp-splash-1.1.10-t.png" width="150" height="135" alt="1.1.10"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.10</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.11.png"><img src="splash/gimp-splash-1.1.11-t.png" width="" height="" alt="1.1.11"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.11</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.12.png"><img src="splash/gimp-splash-1.1.12-t.png" width="" height="" alt="1.1.12"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.1</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.13.png"><img src="splash/gimp-splash-1.1.13-t.png" width="" height="" alt="1.1.13"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.1</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.14.png"><img src="splash/gimp-splash-1.1.14-t.png" width="" height="" alt="1.1.14"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.1</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.15.png"><img src="splash/gimp-splash-1.1.15-t.png" width="" height="" alt="1.1.15"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.15</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.16.png"><img src="splash/gimp-splash-1.1.16-t.png" width="" height="" alt="1.1.16"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.16</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.17.png"><img src="splash/gimp-splash-1.1.17-t.png" width="" height="" alt="1.1.17"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.17</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.18.png"><img src="splash/gimp-splash-1.1.18-t.png" width="" height="" alt="1.1.18"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.18</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.19.png"><img src="splash/gimp-splash-1.1.19-t.png" width="" height="" alt="1.1.19"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.19</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.20.png"><img src="splash/gimp-splash-1.1.20-t.png" width="" height="" alt="1.1.20"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.20</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.21.png"><img src="splash/gimp-splash-1.1.21-t.png" width="" height="" alt="1.1.21"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.21</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.22.png"><img src="splash/gimp-splash-1.1.22-t.png" width="" height="" alt="1.1.22"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.22</p><br />
+  <p>author: tigert</p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.23.png"><img src="splash/gimp-splash-1.1.23-t.png" width="" height="" alt="1.1.23"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.23</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.24.png"><img src="splash/gimp-splash-1.1.24-t.png" width="138" height="150" alt="1.1.24"></a><br />
+  <p>CVS: 1.22</p><br />
+  <p>version:  1.1.24</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.25.png"><img src="splash/gimp-splash-1.1.25-t.png" width="" height="" alt="1.1.25"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.25</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.26.png"><img src="splash/gimp-splash-1.1.26-t.png" width="" height="" alt="1.1.26"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.26</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.27.png"><img src="splash/gimp-splash-1.1.27-t.png" width="150" height="102" alt="1.1.27"></a><br />
+  <p>CVS: 1.25</p><br />
+  <p>version:  1.1.27</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.28.png"><img src="splash/gimp-splash-1.1.28-t.png" width="" height="" alt="1.1.28"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.28</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.29.png"><img src="splash/gimp-splash-1.1.29-t.png" width="" height="" alt="1.1.29"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.29</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.30.png"><img src="splash/gimp-splash-1.1.30-t.png" width="" height="" alt="1.1.30"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.30</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.1.31.png"><img src="splash/gimp-splash-1.1.31-t.png" width="" height="" alt="1.1.31"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.31</p><br />
+  <p>author:  </p>
+</td></tr>
+<tr><td>
+  <a href="splash/gimp-splash-1.1.32.png"><img src="splash/gimp-splash-1.1.32-t.png" width="" height="" alt="1.1.32"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.1.32</p><br />
+  <p>author:  </p>
+</td><td>
+  <a href="splash/gimp-splash-1.2.png"><img src="splash/gimp-splash-1.2-t.png" width="" height="" alt="1.2"></a><br />
+  <p>CVS: </p><br />
+  <p>version:  1.2</p><br />
+  <p>author:  </p>
+</td></tr>
 
+</table>
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
