--- a/about/splash.html
+++ b/about/splash.html
@@ -10,188 +10,188 @@
 </p>
 <table>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.00.png"><img src="splash/gimp-splash-1.1.00-t.png" width="151" height="86" alt="1.1.00"></a>
+  <a href="splash/gimp-splash-1.1.00.png"><img src="splash/gimp-splash-1.1.00-t.png" width="151" height="86" alt="1.1.00"/></a>
   <p>CVS: 1.5</p>
   <p>version: 1.1.0 </p>
   <p>author:  Adrian</p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.01.png"><img src="splash/gimp-splash-1.1.01-t.png" width="151" height="94" alt="1.1.01"></a>
+  <a href="splash/gimp-splash-1.1.01.png"><img src="splash/gimp-splash-1.1.01-t.png" width="151" height="94" alt="1.1.01"/></a>
   <p>CVS: 1.06 </p>
   <p>version: 1.1.1 </p>
   <p>author:  Adrian</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.02.png"><img src="splash/gimp-splash-1.1.02-t.png" width="150" height="105" alt="1.1.02"></a>
+  <a href="splash/gimp-splash-1.1.02.png"><img src="splash/gimp-splash-1.1.02-t.png" width="150" height="105" alt="1.1.02"/></a>
   <p>CVS: 1.08</p>
   <p>version: 1.1.2</p>
   <p>author:  Adrian</p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.03.png"><img src="splash/gimp-splash-1.1.03-t.png" width="150" height="105" alt="1.1.03"></a>
+  <a href="splash/gimp-splash-1.1.03.png"><img src="splash/gimp-splash-1.1.03-t.png" width="150" height="105" alt="1.1.03"/></a>
   <p>CVS: 1.08</p>
   <p>version:  1.1.3</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.04.png"><img src="splash/gimp-splash-1.1.04-t.png" width="" height="" alt="1.1.04"></a>
+  <a href="splash/gimp-splash-1.1.04.png"><img src="splash/gimp-splash-1.1.04-t.png" width="" height="" alt="1.1.04"/></a>
   <p>CVS: </p>
   <p>version:  1.1.4</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.05.png"><img src="splash/gimp-splash-1.1.05-t.png" width="" height="" alt="1.1.05"></a>
+  <a href="splash/gimp-splash-1.1.05.png"><img src="splash/gimp-splash-1.1.05-t.png" width="" height="" alt="1.1.05"/></a>
   <p>CVS: </p>
   <p>version:  1.1.5</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.06.png"><img src="splash/gimp-splash-1.1.06-t.png" width="" height="" alt="1.1.06"></a>
+  <a href="splash/gimp-splash-1.1.06.png"><img src="splash/gimp-splash-1.1.06-t.png" width="" height="" alt="1.1.06"/></a>
   <p>CVS: </p>
   <p>version:  1.1.6</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.07.png"><img src="splash/gimp-splash-1.1.07-t.png" width="" height="" alt="1.1.07"></a>
+  <a href="splash/gimp-splash-1.1.07.png"><img src="splash/gimp-splash-1.1.07-t.png" width="" height="" alt="1.1.07"/></a>
   <p>CVS: </p>
   <p>version:  1.1.7</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.08.png"><img src="splash/gimp-splash-1.1.08-t.png" width="" height="" alt="1.1.08"></a>
+  <a href="splash/gimp-splash-1.1.08.png"><img src="splash/gimp-splash-1.1.08-t.png" width="" height="" alt="1.1.08"/></a>
   <p>CVS: </p>
   <p>version:  1.1.8</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.09.png"><img src="splash/gimp-splash-1.1.09-t.png" width="" height="" alt="1.1.09"></a>
+  <a href="splash/gimp-splash-1.1.09.png"><img src="splash/gimp-splash-1.1.09-t.png" width="" height="" alt="1.1.09"/></a>
   <p>CVS: </p>
   <p>version:  1.1.9</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.10.png"><img src="splash/gimp-splash-1.1.10-t.png" width="150" height="135" alt="1.1.10"></a>
+  <a href="splash/gimp-splash-1.1.10.png"><img src="splash/gimp-splash-1.1.10-t.png" width="150" height="135" alt="1.1.10"/></a>
   <p>CVS: </p>
   <p>version:  1.1.10</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.11.png"><img src="splash/gimp-splash-1.1.11-t.png" width="" height="" alt="1.1.11"></a>
+  <a href="splash/gimp-splash-1.1.11.png"><img src="splash/gimp-splash-1.1.11-t.png" width="" height="" alt="1.1.11"/></a>
   <p>CVS: </p>
   <p>version:  1.1.11</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.12.png"><img src="splash/gimp-splash-1.1.12-t.png" width="" height="" alt="1.1.12"></a>
+  <a href="splash/gimp-splash-1.1.12.png"><img src="splash/gimp-splash-1.1.12-t.png" width="" height="" alt="1.1.12"/></a>
   <p>CVS: </p>
   <p>version:  1.1.1</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.13.png"><img src="splash/gimp-splash-1.1.13-t.png" width="" height="" alt="1.1.13"></a>
+  <a href="splash/gimp-splash-1.1.13.png"><img src="splash/gimp-splash-1.1.13-t.png" width="" height="" alt="1.1.13"/></a>
   <p>CVS: </p>
   <p>version:  1.1.1</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.14.png"><img src="splash/gimp-splash-1.1.14-t.png" width="" height="" alt="1.1.14"></a>
+  <a href="splash/gimp-splash-1.1.14.png"><img src="splash/gimp-splash-1.1.14-t.png" width="" height="" alt="1.1.14"/></a>
   <p>CVS: </p>
   <p>version:  1.1.1</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.15.png"><img src="splash/gimp-splash-1.1.15-t.png" width="" height="" alt="1.1.15"></a>
+  <a href="splash/gimp-splash-1.1.15.png"><img src="splash/gimp-splash-1.1.15-t.png" width="" height="" alt="1.1.15"/></a>
   <p>CVS: </p>
   <p>version:  1.1.15</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.16.png"><img src="splash/gimp-splash-1.1.16-t.png" width="" height="" alt="1.1.16"></a>
+  <a href="splash/gimp-splash-1.1.16.png"><img src="splash/gimp-splash-1.1.16-t.png" width="" height="" alt="1.1.16"/></a>
   <p>CVS: </p>
   <p>version:  1.1.16</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.17.png"><img src="splash/gimp-splash-1.1.17-t.png" width="" height="" alt="1.1.17"></a>
+  <a href="splash/gimp-splash-1.1.17.png"><img src="splash/gimp-splash-1.1.17-t.png" width="" height="" alt="1.1.17"/></a>
   <p>CVS: </p>
   <p>version:  1.1.17</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.18.png"><img src="splash/gimp-splash-1.1.18-t.png" width="" height="" alt="1.1.18"></a>
+  <a href="splash/gimp-splash-1.1.18.png"><img src="splash/gimp-splash-1.1.18-t.png" width="" height="" alt="1.1.18"/></a>
   <p>CVS: </p>
   <p>version:  1.1.18</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.19.png"><img src="splash/gimp-splash-1.1.19-t.png" width="" height="" alt="1.1.19"></a>
+  <a href="splash/gimp-splash-1.1.19.png"><img src="splash/gimp-splash-1.1.19-t.png" width="" height="" alt="1.1.19"/></a>
   <p>CVS: </p>
   <p>version:  1.1.19</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.20.png"><img src="splash/gimp-splash-1.1.20-t.png" width="" height="" alt="1.1.20"></a>
+  <a href="splash/gimp-splash-1.1.20.png"><img src="splash/gimp-splash-1.1.20-t.png" width="" height="" alt="1.1.20"/></a>
   <p>CVS: </p>
   <p>version:  1.1.20</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.21.png"><img src="splash/gimp-splash-1.1.21-t.png" width="" height="" alt="1.1.21"></a>
+  <a href="splash/gimp-splash-1.1.21.png"><img src="splash/gimp-splash-1.1.21-t.png" width="" height="" alt="1.1.21"/></a>
   <p>CVS: </p>
   <p>version:  1.1.21</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.22.png"><img src="splash/gimp-splash-1.1.22-t.png" width="" height="" alt="1.1.22"></a>
+  <a href="splash/gimp-splash-1.1.22.png"><img src="splash/gimp-splash-1.1.22-t.png" width="" height="" alt="1.1.22"/></a>
   <p>CVS: </p>
   <p>version:  1.1.22</p>
   <p>author: tigert</p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.23.png"><img src="splash/gimp-splash-1.1.23-t.png" width="" height="" alt="1.1.23"></a>
+  <a href="splash/gimp-splash-1.1.23.png"><img src="splash/gimp-splash-1.1.23-t.png" width="" height="" alt="1.1.23"/></a>
   <p>CVS: </p>
   <p>version:  1.1.23</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.24.png"><img src="splash/gimp-splash-1.1.24-t.png" width="138" height="150" alt="1.1.24"></a>
+  <a href="splash/gimp-splash-1.1.24.png"><img src="splash/gimp-splash-1.1.24-t.png" width="138" height="150" alt="1.1.24"/></a>
   <p>CVS: 1.22</p>
   <p>version:  1.1.24</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.25.png"><img src="splash/gimp-splash-1.1.25-t.png" width="" height="" alt="1.1.25"></a>
+  <a href="splash/gimp-splash-1.1.25.png"><img src="splash/gimp-splash-1.1.25-t.png" width="" height="" alt="1.1.25"/></a>
   <p>CVS: </p>
   <p>version:  1.1.25</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.26.png"><img src="splash/gimp-splash-1.1.26-t.png" width="" height="" alt="1.1.26"></a>
+  <a href="splash/gimp-splash-1.1.26.png"><img src="splash/gimp-splash-1.1.26-t.png" width="" height="" alt="1.1.26"/></a>
   <p>CVS: </p>
   <p>version:  1.1.26</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.27.png"><img src="splash/gimp-splash-1.1.27-t.png" width="150" height="102" alt="1.1.27"></a>
+  <a href="splash/gimp-splash-1.1.27.png"><img src="splash/gimp-splash-1.1.27-t.png" width="150" height="102" alt="1.1.27"/></a>
   <p>CVS: 1.25</p>
   <p>version:  1.1.27</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.28.png"><img src="splash/gimp-splash-1.1.28-t.png" width="" height="" alt="1.1.28"></a>
+  <a href="splash/gimp-splash-1.1.28.png"><img src="splash/gimp-splash-1.1.28-t.png" width="" height="" alt="1.1.28"/></a>
   <p>CVS: </p>
   <p>version:  1.1.28</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.29.png"><img src="splash/gimp-splash-1.1.29-t.png" width="" height="" alt="1.1.29"></a>
+  <a href="splash/gimp-splash-1.1.29.png"><img src="splash/gimp-splash-1.1.29-t.png" width="" height="" alt="1.1.29"/></a>
   <p>CVS: </p>
   <p>version:  1.1.29</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.30.png"><img src="splash/gimp-splash-1.1.30-t.png" width="" height="" alt="1.1.30"></a>
+  <a href="splash/gimp-splash-1.1.30.png"><img src="splash/gimp-splash-1.1.30-t.png" width="" height="" alt="1.1.30"/></a>
   <p>CVS: </p>
   <p>version:  1.1.30</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.1.31.png"><img src="splash/gimp-splash-1.1.31-t.png" width="" height="" alt="1.1.31"></a>
+  <a href="splash/gimp-splash-1.1.31.png"><img src="splash/gimp-splash-1.1.31-t.png" width="" height="" alt="1.1.31"/></a>
   <p>CVS: </p>
   <p>version:  1.1.31</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp-splash-1.1.32.png"><img src="splash/gimp-splash-1.1.32-t.png" width="" height="" alt="1.1.32"></a>
+  <a href="splash/gimp-splash-1.1.32.png"><img src="splash/gimp-splash-1.1.32-t.png" width="" height="" alt="1.1.32"/></a>
   <p>CVS: </p>
   <p>version:  1.1.32</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp-splash-1.2.png"><img src="splash/gimp-splash-1.2-t.png" width="" height="" alt="1.2"></a>
+  <a href="splash/gimp-splash-1.2.png"><img src="splash/gimp-splash-1.2-t.png" width="" height="" alt="1.2"/></a>
   <p>CVS: </p>
   <p>version:  1.2</p>
   <p>author:  </p>
