brix helped me to see the error in the image names.

--- a/about/splash.html
+++ b/about/splash.html
@@ -10,34 +10,34 @@
 </p>
 <table>
 <tr><td>
-  <a href="splash/gimp_1_splash-1.5.png"><img src="splash/gimp_splash-1.5-t.png" width="150" height="94" alt="1.5"/></a>
+  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp_splash-1.5-t.png" width="150" height="94" alt="1.5"/></a>
   <p>CVS: 1.5</p>
   <p>version: 1.1.0 </p>
   <p>author:  Adrian</p>
 </td><td>
-  <a href="splash/gimp_1_splash-1.5.png"><img src="splash/gimp_splash-1.5-t.png" width="150" height="94" alt="1.5"/></a>
+  <a href="splash/gimp1_1_splash-1.5.png"><img src="splash/gimp_splash-1.5-t.png" width="150" height="94" alt="1.5"/></a>
   <p>CVS: 1.5 </p>
   <p>version: 1.1.1 </p>
   <p>author:  Adrian</p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7</p>
   <p>version: 1.1.2</p>
   <p>author:  Adrian</p>
 </td><td>
-  <a href="splash/gimp_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7</p>
   <p>version:  1.1.3</p>
   <p>author:  </p>
 </td></tr>
 <tr><td>
-  <a href="splash/gimp_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7</p>
   <p>version:  1.1.4</p>
   <p>author:  </p>
 </td><td>
-  <a href="splash/gimp_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
+  <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp_splash-1.7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7</p>
   <p>version:  1.1.5</p>
   <p>author:  </p>
