added the complete cvs archives of the splashscreens (as gathered by yosh) and some other cosmetics.

--- a/about/splash.html
+++ b/about/splash.html
@@ -4,10 +4,7 @@
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">Development Version Splash History</div>
-<div class="subtitle">as extracted from the tarballs</div>
-<p>
-  1.1 Series
-</p>
+<div class="subtitle">1.1 Series</div>
 <table>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.0 </div>
