embarrassing mistakes fixed ...

--- a/about/splash.html
+++ b/about/splash.html
@@ -26,18 +26,18 @@
   <div  class="subtitle">tarball: 1.1.3</div>
   <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1..7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7<br />
-  artist:  </p>
+  artist:  Adrian</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.4</div>
   <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1..7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7<br />
-  artist:  </p>
+  artist:  Adrian</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.5</div>
   <a href="splash/gimp1_1_splash-1.7.png"><img src="splash/gimp1_1_splash-1..7-t.png" width="150" height="105" alt="1.7"/></a>
   <p>CVS: 1.7<br />
-  artist:  </p>
+  artist:  Adrian</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.6</div>
@@ -81,7 +81,6 @@
   <div  class="subtitle">tarball: 1.1.1</div>
   <a href="splash/gimp1_1_splash-1..15.png"><img src="splash/gimp1_1_splash-1..15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15</p>
-  <p>tarball:  1.1.1<br />
   artist:  adam</p>
 </td></tr>
 <tr><td>
@@ -182,14 +181,12 @@
   <div  class="subtitle">tarball: 1.1.31</div>
   <a href="splash/gimp1_1_splash.1.1.10.png"><img src="splash/gimp1_1_splash.1.1.10-t.png" width="150" height="84" alt="1.10"/></a>
   <p>CVS:1.10 </p>
-  <p>tarball:  1.1.31<br />
   artist:  Sven, garrett</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.32</div>
   <a href="splash/gimp1_1_splash.1.1.10.png"><img src="splash/gimp1_1_splash.1.1.10-t.png" width="150" height="84" alt="1.10"/></a>
   <p>CVS:1.10 </p>
-  <p>tarball:  1.1.32<br />
   artist:  Sven, garrett</p>
 </td><td>
   <div  class="subtitle">tarball: 1.2.0</div>
