more corrections and more and more

--- a/about/splash.html
+++ b/about/splash.html
@@ -41,12 +41,12 @@
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.6</div>
-  <a href="splash/gimp1_1_splash-1.10.png"><img src="splash/gimp1_1_splash-1.10-t.png" width="120" height="150" alt="1.10"/></a>
+  <a href="splash/gimp1_1_splash.1.10.png"><img src="splash/gimp1_1_splash.1.10-t.png" width="120" height="150" alt="1.10"/></a>
   <p>CVS: 1.10<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.7</div>
-  <a href="splash/gimp1_1_splash-1.12.png"><img src="splash/gimp1_1_splash-1.12-t.png" width="120" height="150" alt="1.12"/></a>
+  <a href="splash/gimp1_1_splash.1.12.png"><img src="splash/gimp1_1_splash.1.12-t.png" width="120" height="150" alt="1.12"/></a>
   <p>CVS: 1.12<br />
   artist:  tigert</p>
 </td></tr>
@@ -73,14 +73,14 @@
   artist:  adam</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">tarball: 1.1.1</div>
+  <div  class="subtitle">tarball: 1.1.12</div>
   <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
   <p>CVS: 1.15<br />
   artist:  adam</p>
 </td><td>
-  <div  class="subtitle">tarball: 1.1.1</div>
+  <div  class="subtitle">tarball: 1.1.13</div>
   <a href="splash/gimp1_1_splash-1.15.png"><img src="splash/gimp1_1_splash-1.15-t.png" width="150" height="135" alt="1.15"/></a>
-  <p>CVS: 1.15</p>
+  <p>CVS: 1.15<br />
   artist:  adam</p>
 </td></tr>
 <tr><td>
@@ -90,24 +90,24 @@
   artist:  adam</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.15</div>
-  <a href="splash/gimp1_1_splash-1.17.png"><img src="splash/gimp1_1_splash-1.17-t.png" width="138" height="150" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash-1.17.png"><img src="splash/gimp1_1_splash-1.17-t.png" width="138" height="150" alt="1.17"/></a>
   <p>CVS: 1.17<br />
   artist:  tigert</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.16</div>
-  <a href="splash/gimp1_1_splash-1.17.png"><img src="splash/gimp1_1_splash-1.17-t.png" width="138" height="150" alt="1.15"/></a>
+  <a href="splash/gimp1_1_splash-1.17.png"><img src="splash/gimp1_1_splash-1.17-t.png" width="138" height="150" alt="1.17"/></a>
   <p>CVS: 1.17<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.17</div>
-  <a href="splash/gimp1_1_splash-1.18.png"><img src="splash/gimp1_1_splash-1.18-t.png" width="150" height="116" alt="1.18"/></a>
+  <a href="splash/gimp1_1_splash.1.18.png"><img src="splash/gimp1_1_splash.1.18-t.png" width="150" height="116" alt="1.18"/></a>
   <p>CVS: 1.18<br />
   artist:  Raphael</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.18</div>
-  <a href="splash/gimp1_1_splash-1.19.png"><img src="splash/gimp1_1_splash-1.19-t.png" width="119" height="150" alt="1.19"/></a>
+  <a href="splash/gimp1_1_splash.1.19.png"><img src="splash/gimp1_1_splash.1.19-t.png" width="119" height="150" alt="1.19"/></a>
   <p>CVS: 1.19<br />
   artist:  tigert</p>
 </td><td>
@@ -117,9 +117,8 @@
   artist:  tigert</p>
 </td></tr>
 <tr><td>
-  <div  class="subtitle">tarball: 1.1.20</div>
-  <a href="splash/gimp1_1_splash-1.2.png"><img src="splash/gimp1_1_splash-1.2-t.png" width="120" height="150" alt="1.2"/></a>
-  <p>CVS: 1.2<br />
+  <a href="splash/gimp1_1_splash-1.11.png"><img src="splash/gimp1_1_splash-1.11-t.png" width="120" height="150" alt="1.11"/></a>
+  <p>CVS: 1.11<br />
   artist:  tigert</p>
 </td><td>
   <div  class="subtitle">tarball: 1.1.21</div>
@@ -180,17 +179,17 @@
 </td><td>
   <div  class="subtitle">tarball: 1.1.31</div>
   <a href="splash/gimp1_1_splash.1.1.10.png"><img src="splash/gimp1_1_splash.1.1.10-t.png" width="150" height="84" alt="1.10"/></a>
-  <p>CVS:1.10 </p>
+  <p>CVS:1.10 <br />
   artist:  Sven, garrett</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.1.32</div>
   <a href="splash/gimp1_1_splash.1.1.10.png"><img src="splash/gimp1_1_splash.1.1.10-t.png" width="150" height="84" alt="1.10"/></a>
-  <p>CVS:1.10 </p>
+  <p>CVS:1.10 <br />
   artist:  Sven, garrett</p>
 </td><td>
   <div  class="subtitle">tarball: 1.2.0</div>
-  <a href="splash/gimp1_1_splash.1.1.11.png"><img src="splash/gimp1_1_splash.1.1.11-t.png" width="" height="" alt="1.11"/></a>
+  <a href="splash/gimp1_1_splash-1.11.png"><img src="splash/gimp1_1_splash-1.11-t.png" width="120" height="150" alt="1.11"/></a>
   <p>CVS: 1.11<br />
   artist:  tigert</p>
 </td></tr>
