bout/splash.html, about/splash/*.png: i removed these bout/splash-1.1.html, about/splash-1.3.html,*.png, about/splash-cvs.html, about/splash-stable, about/index.html and about/*.png:  split the splashes up and made pngs and thumbnails.
about/splash/README.splash, about/splash/gimp/*, about/splash/gimp-1.1/*,
about/splash/gimp-1.3/*: the original images from cvs and instructions on
how to get them.

--- a/about/index.html
+++ b/about/index.html
@@ -14,8 +14,9 @@
   (<a href="introduction.html">more ...</a>)
 </p>
 <!--#include virtual="/includes/urls_important.inc" -->
-<div class="subtitle"><a href="history.html">History of The GIMP</a></div>
+<div class="subtitle">GIMP History</a></div>
   <ul>
+    <li><a href="history.html">History of The GIMP</a></li>
     <li><a href="http://groups.google.com/groups?selm=petm-2907952329370001%40charnley.hip.berkeley.edu&output=gplain">Two Questions</a></li>
     <li><a href="http://groups.google.com/groups?selm=3ua2hd%24bbv%40agate.berkeley.edu&output=gplain">One Of Two Options</a></li>
     <li><a href="http://www.gimp.org/~sjburges/gimp-history.html">ancient history</a></li>
@@ -23,6 +24,13 @@
     <li><a name="src-change10" href="ChangeLog.pre-1-0">ChangeLog.pre-1-0</a></li>
     <li><a name="src-change12" href="ChangeLog.pre-1-2">ChangeLog.pre-1-2</a></li>
     <li><a href="splash.html">Splash History</a></li>
+  </ul>
+<div class="subtitle">Splash Screens</div>
+  <ul>
+    <li><a href="splash-stable.html">Stable Splash Screens</a></li>
+    <li><a href="splash-1.1.html">1.1 Tarball Splash Screens</a></li>
+    <li><a href="splash-1.3.html">1.3 Tarball Splash Screens</a></li>
+    <li><a href="splash-cvs.html">The Whole Repository of Splash Screens</a></li>
   </ul>
 <div class="subtitle">Awards won by The GIMP</div>
 <p>
