style/default.css, tutorials/Perlotine/index.html: added a tag that will hopefully help the tables in the perlotine tutorial.
* tutorials/Image_Map/index.html: added the javascript into the "invisible"
head so the pop-up window will work.

--- a/tutorials/Image_Map/index.html
+++ b/tutorials/Image_Map/index.html
@@ -1,5 +1,31 @@
 <!--#include virtual="/includes/header_pretitle.inc" -->
 <title>GIMP - Image Map Tutorial</title>
+		<script language="JavaScript">
+
+<!-- Begin
+var newwindow = ''
+
+function popup(url, textbox)
+{
+    if (newwindow.location) {
+	newwindow.location.href = url
+    } else {
+        newwindow = window.open(url, 'colorpicker',
+				     'toolbar=0,scrollbars=1,location=1,' +
+				     'statusbar=0,menubar=0,resizable=1,' +
+				     'width=500,height=450,' +
+				     'left = 262,top = 184');
+    }
+
+    if (window.focus) {
+	newwindow.focus()
+    }
+
+    self.textbox = textbox
+}
+// End -->
+		</script>
+
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <div id="main">
 <div class="heading">Image Map Tutorial</div>
