--- a/tutorials/Perlotine/index.html
+++ b/tutorials/Perlotine/index.html
@@ -54,15 +54,15 @@
 <div class="subtitle">Step 3</div>
 <table cellspacing=0 cellpadding=0>
 <tr>
- <td><img alt="" src="imap-table1-0-0.png" width="290" height="73"></td>
+ <td><img class="map" alt="" src="imap-table1-0-0.png" width="290" height="73"></td>
  </tr><tr>
- <td><img alt="" src="imap-table1-1-0.png" width="290" height="177"></td>
+ <td><img class="map" alt="" src="imap-table1-1-0.png" width="290" height="177"></td>
  </tr><tr>
- <td><img alt="" src="imap-table1-2-0.png" width="290" height="17"></td>
+ <td><img class="map" alt="" src="imap-table1-2-0.png" width="290" height="17"></td>
  </tr><tr>
- <td><img alt="" src="imap-table1-3-0.png" width="290" height="21"></td>
+ <td><img class="map" alt="" src="imap-table1-3-0.png" width="290" height="21"></td>
  </tr><tr>
- <td><img alt="" src="imap-table1-4-0.png" width="290" height="50"></td>
+ <td><img class="map" alt="" src="imap-table1-4-0.png" width="290" height="50"></td>
  </tr>
 </table>
 <p>
@@ -94,9 +94,9 @@
 
 <table cellspacing=0 cellpadding=0 border=0>
 <tr>
-  <td><img alt="" src="imap-table1-3-0-0.png" width="10" height="21"></td>
-  <td><img alt="" src="imap-table1-3-0-1.png" width="219" height="21"></td>
-  <td><img alt="" src="imap-table1-3-0-2.png" width="61" height="21"></td>
+  <td><img class="map" alt="" src="imap-table1-3-0-0.png" width="10" height="21"></td>
+  <td><img class="map" alt="" src="imap-table1-3-0-1.png" width="219" height="21"></td>
+  <td><img class="map" alt="" src="imap-table1-3-0-2.png" width="61" height="21"></td>
 </tr>
 </table>
 <p>
@@ -113,18 +113,18 @@
 </div>
 <table cellspacing=0 cellpadding=0 border=0>
  <tr>
-   <td colspan="3"><img alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
+   <td colspan="3"><img class="map" alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
  </tr>
  <tr>
-   <td colspan="3"><img alt=" " src="imap-table1-1-0.png" width="290" height="177"></td>
+   <td colspan="3"><img class="map" alt=" " src="imap-table1-1-0.png" width="290" height="177"></td>
  </tr>
  <tr>
-   <td colspan="3"><img alt=" " src="imap-table1-2-0.png" width="290" height="17"></td>
+   <td colspan="3"><img class="map" alt=" " src="imap-table1-2-0.png" width="290" height="17"></td>
  </tr>
  <tr>
-   <td><img alt=" " src="imap-table1-3-0-0.png" width="10" height="21"></td>
-   <td><img alt=" " src="imap-table1-3-0-1.png" width="219" height="21"></td>
-   <td><img alt=" " src="imap-table1-3-0-2.png" width="61" height="21"></td>
+   <td><img class="map" alt=" " src="imap-table1-3-0-0.png" width="10" height="21"></td>
+   <td><img class="map" alt=" " src="imap-table1-3-0-1.png" width="219" height="21"></td>
+   <td><img class="map" alt=" " src="imap-table1-3-0-2.png" width="61" height="21"></td>
  </tr><tr>
      <td colspan="3"><img alt=" " src="imap-table1-4-0.png" width="290" height="50"></td>
  </tr>
@@ -162,82 +162,82 @@
 </div>
 <table cellspacing=0 cellpadding=0 border=0>
  <tr>
-   <td colspan="3"><img alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
+   <td colspan="3"><img class="map" alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
  </tr>
  <tr>
    <td colspan="3"><table cellspacing=0 cellpadding=0 border=0>
  <tr>
-   <td><img alt=" " src="imap-table1-1-0-0.png" width="15" height="177"></td>
-   <td><img alt=" " src="imap-table1-1-0-1.png" width="241" height="177"></td>
-   <td><img alt=" " src="imap-table1-1-0-2.png" width="34" height="177"></td>
+   <td><img class="map" alt=" " src="imap-table1-1-0-0.png" width="15" height="177"></td>
+   <td><img class="map" alt=" " src="imap-table1-1-0-1.png" width="241" height="177"></td>
+   <td><img class="map" alt=" " src="imap-table1-1-0-2.png" width="34" height="177"></td>
  </tr>
 </table>
 </td>
  </tr>
  <tr>
-   <td colspan="3"><img alt=" " src="imap-table1-2-0.png" width="290" height="17"></td>
+   <td colspan="3"><img class="map" alt=" " src="imap-table1-2-0.png" width="290" height="17"></td>
  </tr>
  <tr>
-   <td><img alt=" " src="imap-table1-3-0-0.png" width="10" height="21"></td>
-   <td><img alt=" " src="imap-table1-3-0-1.png" width="219" height="21"></td>
-   <td><img alt=" " src="imap-table1-3-0-2.png" width="61" height="21"></td>
+   <td><img class="map" alt=" " src="imap-table1-3-0-0.png" width="10" height="21"></td>
+   <td><img class="map" alt=" " src="imap-table1-3-0-1.png" width="219" height="21"></td>
+   <td><img class="map" alt=" " src="imap-table1-3-0-2.png" width="61" height="21"></td>
  </tr><tr>
    <td colspan="3"><table cellspacing=0 cellpadding=0 border=0>
  <tr>
-   <td><img alt=" " src="imap-table1-4-0-0.png" width="5" height="6"></td>
-   <td><img alt=" " src="imap-table1-4-0-1.png" width="277" height="6"></td>
-   <td><img alt=" " src="imap-table1-4-0-2.png" width="8" height="6"></td>
+   <td><img class="map" alt=" " src="imap-table1-4-0-0.png" width="5" height="6"></td>
+   <td><img class="map" alt=" " src="imap-table1-4-0-1.png" width="277" height="6"></td>
+   <td><img class="map" alt=" " src="imap-table1-4-0-2.png" width="8" height="6"></td>
  </tr>
  <tr>
-   <td><img alt=" " src="imap-table1-4-1-0.png" width="5" height="36"></td>
-   <td><img alt=" " src="imap-table1-4-1-1.png" width="277" height="36"></td>
-   <td><img alt=" " src="imap-table1-4-1-2.png" width="8" height="36"></td>
+   <td><img class="map" alt=" " src="imap-table1-4-1-0.png" width="5" height="36"></td>
+   <td><img class="map" alt=" " src="imap-table1-4-1-1.png" width="277" height="36"></td>
+   <td><img class="map" alt=" " src="imap-table1-4-1-2.png" width="8" height="36"></td>
  </tr>
  <tr>
-   <td><img alt=" " src="imap-table1-4-2-0.png" width="5" height="8"></td>
-   <td><img alt=" " src="imap-table1-4-2-1.png" width="277" height="8"></td>
-   <td><img alt=" " src="imap-table1-4-2-2.png" width="8" height="8"></td>
+   <td><img class="map" alt=" " src="imap-table1-4-2-0.png" width="5" height="8"></td>
+   <td><img class="map" alt=" " src="imap-table1-4-2-1.png" width="277" height="8"></td>
+   <td><img class="map" alt=" " src="imap-table1-4-2-2.png" width="8" height="8"></td>
  </tr>
 </table>
 </td></tr></table>
 
 <table cellspacing=0 cellpadding=0 border=0>
   <tr>
-    <td colspan="3"><img alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
+    <td colspan="3"><img class="map" alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
   </tr>
   <tr>
     <td colspan="3"><table cellspacing=0 cellpadding=0 border=0>
   <tr>
-    <td><img alt=" " src="imap-table1-1-0-0.png" width="15" height="177"></td>
-    <td><img alt=" " src="imap-table1-1-0-1.png" width="241" height="177"></td>
-    <td><img alt=" " src="imap-table1-1-0-2.png" width="34" height="177"></td>
+    <td><img class="map" alt=" " src="imap-table1-1-0-0.png" width="15" height="177"></td>
+    <td><img class="map" alt=" " src="imap-table1-1-0-1.png" width="241" height="177"></td>
+    <td><img class="map" alt=" " src="imap-table1-1-0-2.png" width="34" height="177"></td>
   </tr>
 </table>
 </td>
   </tr>
   <tr>
-    <td colspan="3"><img alt=" " src="imap-table1-2-0.png" width="290" height="17"></td>
+    <td colspan="3"><img class="map" alt=" " src="imap-table1-2-0.png" width="290" height="17"></td>
   </tr>
   <tr>
-    <td><img alt=" " src="imap-table1-3-0-0.png" width="10" height="21"></td>
-    <td><img alt=" " src="imap-table1-3-0-1.png" width="219" height="21"></td>
-    <td><img alt=" " src="imap-table1-3-0-2.png" width="61" height="21"></td>
+    <td><img class="map" alt=" " src="imap-table1-3-0-0.png" width="10" height="21"></td>
+    <td><img class="map" alt=" " src="imap-table1-3-0-1.png" width="219" height="21"></td>
+    <td><img class="map" alt=" " src="imap-table1-3-0-2.png" width="61" height="21"></td>
   </tr><tr>
     <td colspan="3"><table cellspacing=0 cellpadding=0 border=0>
   <tr>
-    <td><img alt=" " src="imap-table1-4-0-0.png" width="5" height="6"></td>
-    <td><img alt=" " src="imap-table1-4-0-1.png" width="277" height="6"></td>
-    <td><img alt=" " src="imap-table1-4-0-2.png" width="8" height="6"></td>
+    <td><img class="map" alt=" " src="imap-table1-4-0-0.png" width="5" height="6"></td>
+    <td><img class="map" alt=" " src="imap-table1-4-0-1.png" width="277" height="6"></td>
+    <td><img class="map" alt=" " src="imap-table1-4-0-2.png" width="8" height="6"></td>
   </tr>
   <tr>
-    <td><img alt=" " src="imap-table1-4-1-0.png" width="5" height="36"></td>
-    <td><img alt=" " src="imap-table1-4-1-1.png" width="277" height="36"></td>
-    <td><img alt=" " src="imap-table1-4-1-2.png" width="8" height="36"></td>
+    <td><img class="map" alt=" " src="imap-table1-4-1-0.png" width="5" height="36"></td>
+    <td><img class="map" alt=" " src="imap-table1-4-1-1.png" width="277" height="36"></td>
+    <td><img class="map" alt=" " src="imap-table1-4-1-2.png" width="8" height="36"></td>
   </tr>
   <tr>
-    <td><img alt=" " src="imap-table1-4-2-0.png" width="5" height="8"></td>
-    <td><img alt=" " src="imap-table1-4-2-1.png" width="277" height="8"></td>
-    <td><img alt=" " src="imap-table1-4-2-2.png" width="8" height="8"></td>
+    <td><img class="map" alt=" " src="imap-table1-4-2-0.png" width="5" height="8"></td>
+    <td><img class="map" alt=" " src="imap-table1-4-2-1.png" width="277" height="8"></td>
+    <td><img class="map" alt=" " src="imap-table1-4-2-2.png" width="8" height="8"></td>
   </tr>
 </table>
 </td></tr></table>
